# samay

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  LICENSE  PROGRESS.md  PROJECT_BRIEF.md  README.md  REPORT.md  UPDATING_REGULATORY.md  docker-compose.yml  pyproject.toml  requirements.lock.txt
.github/workflows/: deploy.yml  regulatory-watchdog.yml
artifacts/: case_study.json  main_summary.csv
artifacts/study_data/: dep_sweep.csv  main.csv  main_strong_baseline.csv  scalability_heuristic.csv  sensitivity.csv  size.csv
benchmark/: enterprise.json  india_dpi.json  sample.cbom.json
benchmark/synthetic/: deadline_heavy.json  dense_deps.json  easy_small.json  manifest.json  mid_balanced.json  scale_120.json  tight_budget.json
configs/: experiment.yaml  gen.yaml  risk.yaml
deploy/: README.md  deploy_cloudrun.sh
research/: calibration-crypto.md  cbom-and-dpi.md  timelines-and-related-work.md
runs_smoke/: smoke.csv  smoke_summary.csv
scripts/: 00_setup.sh  calibrate.py  case_study.py  feasmap.py  make_figures.py  reanalyze_strong_baseline.py  run_main_study.py  run_study.sh  scalability_matheuristic.py
src/pqcsched/: __init__.py  api.py  cbom.py  cli.py  experiment.py  generate.py  greedy.py  heuristic.py  model.py  pareto.py  regulatory.py  result.py  risk.py  scenarios.py  score.py  solve_cpsat.py  solve_milp.py  viz.py
src/pqcsched/data/: enterprise.json  regulatory.json
tests/: test_cbom.py  test_cli.py  test_constraints.py  test_heuristic.py  test_pareto.py  test_parity.py  test_regulatory.py  test_solvers_agree.py
(+1 files in other folders)
