[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqcsched"
version = "0.1.0"
description = "SAMAY: provably optimal phased scheduling for post-quantum cryptographic migration"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Divya Mohan", email = "divyamohan1993@gmail.com" }]
keywords = ["post-quantum", "pqc", "migration", "scheduling", "optimization", "cp-sat", "milp", "cbom"]

# CP-SAT (ortools) is primary. HiGHS/PuLP(+CBC) are the free MILP fallbacks.
# Gurobi is OPTIONAL (see [project.optional-dependencies]) and MUST NOT be a hard dependency.
dependencies = [
  "ortools>=9.10",
  "highspy>=1.7",
  "pulp>=2.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.13",
  "networkx>=3.3",
  "matplotlib>=3.8",
  "plotly>=5.22",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "pydantic>=2.7",
  "cyclonedx-python-lib>=7.0",
  "orjson>=3.10",
]

[project.optional-dependencies]
gurobi = ["gurobipy>=11.0"]          # optional exact-performance benchmark only
dev = ["pytest>=8.0"]
api = ["fastapi>=0.111", "uvicorn>=0.30"]

[project.scripts]
pqcsched = "pqcsched.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pqcsched = ["static/*.html", "static/*.css", "static/*.js", "data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
